# interface-abstraction-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: polynomial.py  protocol.py
tests/: test_interface.py
