[tool.poetry]
name = "interface-abstraction-python"
version = "0.1.0"
description = ""
authors = ["Dhruv Sharma <dhruv.sharma@polytechnique.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
mypy = "^1.10.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
